Changed language input type to select for add book and update book modals

--- a/src/main/resources/static/css/book.css
+++ b/src/main/resources/static/css/book.css
@@ -212,6 +212,51 @@ textarea.form-control {
     vertical-align: middle;
 }
 
+.bootstrap-select > .dropdown-toggle.bs-placeholder, .bootstrap-select > .dropdown-toggle.bs-placeholder:hover,
+.bootstrap-select > .dropdown-toggle.bs-placeholder:focus, .bootstrap-select > .dropdown-toggle.bs-placeholder:active, .btn-light {
+    border: 3px solid #708090;
+    resize: none;
+    border-radius: 10px;
+    color: #171717;
+    height: 30px;
+    padding-bottom: 30px;
+    width: auto;
+    min-width: 218px;
+}
+
+.btn-light:not(:disabled):not(.disabled).active, .btn-light:not(:disabled):not(.disabled):active,
+.show > .btn-light.dropdown-toggle {
+    color: #171717;
+    border: 3px solid #708090;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.btn-light:hover, .btn-light:focus {
+    color: #212529;
+    border: 3px solid #708090;
+    background-color: white;
+    border-radius: 10px;
+}
+
+div.dropdown-menu.show {
+    border: 1px solid #708090;
+    border-radius: 5%;
+    background-image: none;
+}
+
+ul.dropdown-menu.inner.show a {
+    color: black;
+}
+
+ul.dropdown-menu.inner.show {
+    background-image: none;
+}
+
+.dropdown-item:hover, .dropdown-item.active, .dropdown-item:active {
+    background-color: orange;
+}
+
 .dropdown-menu.show {
     display: block;
     left: 40px;
