--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -11,8 +11,13 @@
     <script crossorigin="anonymous"
             integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
             src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" th:href="@{/css/chat.css}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css"/>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/book.css}">
+    <link rel="stylesheet" th:href="@{/css/chat.css}">
     <link sec:authorize="hasAuthority('ADMIN')" rel="stylesheet" type="text/css" th:href="@{/css/notification.css}">
 </head>
 <body>
@@ -149,12 +154,23 @@
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        <label for="title"><span class="req"></span> Book Title </label>
-                        <input autocomplete="on" class="form-control" id="txt-title"
-                               oninput="validateTitle(this.value);"
-                               required
-                               type="text"/>
-                        <div id="errLast-title"></div>
+
+                        <div class="form-group language-pages">
+                            <label for="txt-title"><span class="req"></span> Book Title </label>
+                            <input autocomplete="off" class="form-control add" id="txt-title"
+                                   oninput="validateTitle(this.value);"
+                                   required
+                                   type="text"/>
+                            <div class="error-messages" id="errLast-title"></div>
+                        </div>
+                        <div class="form-group language-pages">
+                            <label for="txt-pages"><span class="req"></span> Pages </label>
+                            <input autocomplete="off" class="form-control add" id="txt-pages"
+                                   oninput="validatePages(this.value);"
+                                   required
+                                   type="number"/>
+                            <div class="error-messages" id="errLast-pages"></div>
+                        </div>
                     </div>
                     <div class="form-group first-last-name">
                         <label for="txt-first-name"><span class="req"></span> Author first name </label>
@@ -174,23 +190,16 @@
                         <div class="error-messages" id="errLast-last-name"></div>
                     </div>
                     <br>
-                    <div class="form-group language-pages">
-                        <label for="txt-language"><span class="req"></span> Language </label>
-                        <input autocomplete="off" class="form-control" id="txt-language"
-                               oninput="validateLanguage(this.value);"
-                               required
-                               type="text"/>
+
+                    <div class="form-group py-2">
+                        <label for="txt-language"><span class="req"></span> Language </label><br>
+                        <select class="selectpicker" data-live-search="true" id="txt-language"
+                                onchange="validateLanguage(this.value);"
+                                title="Choose language...">
+                        </select><br>
                         <div class="error-messages" id="errLast-language"></div>
                     </div>
 
-                    <div class="form-group language-pages">
-                        <label for="txt-pages"><span class="req"></span> Pages </label>
-                        <input autocomplete="off" class="form-control" id="txt-pages"
-                               oninput="validatePages(this.value);"
-                               required
-                               type="number"/>
-                        <div class="error-messages" id="errLast-pages"></div>
-                    </div>
                     <div class="form-group ">
                         <label for="txt-description"><span class="req"></span> Description </label>
                         <textarea autocomplete=" " class="form-control" id="txt-description"
